<resources>
    <string name="app_name">Knowledge Hub Final</string>
    <string name="appName">Knowledge Hub</string>
    <string name="splash">Grow your Education and Level up with....</string>
    <string name="email">Type your Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Enter Password</string>
    <string name="Re_password">Confirm Password</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="havent_registered_yet">Not Registered Yet?</string>
    <string name="sign_in_topic">Sign In</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="Maths_Des">O/L new syllabus mathematics courses</string>
    <string name="enroll_btn">Enroll</string>
    <string name="Science_Txt">Science</string>
    <string name="Science_Des">O/L new syllabus Science courses</string>
    <string name="mathematics_txt">Mathematics</string>
    <string name="overall_progress_btn">Overall Progress</string>
    <string name="start_learning">Start Learning...</string>
    <string name="search_hint">Search Lessons</string>
    <string name="lesson_pdf_txt">Lesson PDF</string>
    <string name="SubjectTitle_Math">Mathematics</string>
    <string name="factors">Factors</string>
    <string name="quiz_btn">Quiz</string>
    <string name="graphs">Graphs</string>
    <string name="factors_quiz">Mathematics Quiz</string>
    <string name="question_1_of_40">Question 1 of 40</string>
    <string name="what_is_the_factor_of_12">What is the factor of 12?</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="next_btn">Next</string>
    <string name="school">School</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="english_txt">English</string>
    <string name="sinhala_txt">Sinhala</string>
    <string name="Sinhala_Des">O/L new syllabus Sinhala courses</string>
    <string name="English_Des">O/L new syllabus English courses</string>
    <string name="no_pdf_file_selected_yet">No PDF File Selected yet !</string>
</resources>